DB-8357 fix SpotBugs